--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -111,4 +111,4 @@ server:
 
 system:
   avatar: https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif?imageView2/1/w/80/h/80
-  fast-url: http://10.10.10.164/
+  fast-url: http://oa.bdsmc.net:16480/
