--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -61,6 +61,7 @@ spring:
     properties:
           hibernate:
             format_sql: true
+    generate-ddl: true
   jackson:
     default-property-inclusion: non_null
     date-format: yyyy-MM-dd HH:mm:ss
