--- a/src/main/resources/application-six.yml
+++ b/src/main/resources/application-six.yml
@@ -79,7 +79,7 @@ spring:
           enable: true
 
 flowable:
-  checkProcessDefinitions: false
+  check-process-definitions: false
   common:
     app:
       idm-url: a
