--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -84,7 +84,7 @@ spring:
         ssl:
           enable: true
 flowable:
-  checkProcessDefinitions: false
+  check-process-definitions: false
   common:
     app:
       idm-url: a
