--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -56,12 +56,6 @@ spring:
     port: 5672
     username: guest
     password: guest
-  jpa:
-    show-sql: true
-    properties:
-          hibernate:
-            format_sql: true
-    generate-ddl: true
   jackson:
     default-property-inclusion: non_null
     date-format: yyyy-MM-dd HH:mm:ss
@@ -90,6 +84,15 @@ flowable:
       idm-url: a
   idm:
     enabled: false
+# 异步线程配置
+async:
+  executor:
+    thread:
+      core-pool-size: 5 # 配置核心线程数
+      max-pool-size: 5 # 配置最大线程数
+      queue-capacity: 99999 # 配置队列大小
+      name:
+        prefix: async-service- # 配置线程池中的线程的名称前缀
 
 # 分布式文件系统FDFS配置
 fdfs:
@@ -111,5 +114,6 @@ server:
 #    key-alias: jsixg.com
 
 system:
+  active: dev
   avatar: https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif?imageView2/1/w/80/h/80
   fast-url: http://10.10.10.164/
